src/test/deca/syntax/invalid/parenthese5.deca
//Description
//    Vérifier la considération des parenthèses
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
whilea==3){;}
}
